Mudança de layout

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
                 
 html {
 /* Para colocar a cor de fundo do html */
-    background-color: #2F4B54;
-    color: #C9DFF2;
+    background-color: #1F8DA6;
+    color: #C4EEF2;
 }
 
 /* CONFIGURAÇÃO DO HEADER - CABEÇALHO */
@@ -26,6 +26,7 @@ html {
 /* tamanho da imagem do logo */
     width: 200px;
     height: 110px;
+    margin-left: 25px;
 }
                 
 .header-contents .navbar {
@@ -48,24 +49,22 @@ html {
 .navbar ul a {
 /* estilização do link da página no menu */
     text-decoration: none;
-    color: #C9DFF2;
+    color: #C4EEF2;
+    font-size: 22px;
 }
 
 .navbar ul a:hover {
 /* estilização de quando o mouse passa sobre o link no menu */
     color: #F27457;
     transition: 0.9s;
-    font-size: 18px;
+    font-size: 28px;
 }
 
 /* CONFIGURAÇÃO DO BODY - CORPO DA PÁGINA*/
                
-.banner {
+.banner img {
 /* estilização e enquadramento do banner - em todas as páginas */
-    background-image: url(assets/banner-site.jpg);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
+   width: 100%;
     height: 200px;
 }
                
