--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
                 
 html {
 /* Para colocar a cor de fundo do html */
-    background-color: #1F8DA6;
-    color: #C4EEF2;
+    background-color: #E8FCFD;
+    color: #231459;
 }
 
 /* CONFIGURAÇÃO DO HEADER - CABEÇALHO */
@@ -20,13 +20,14 @@ html {
 /* Estilização das displays do cabeçalho*/
     display: flex;
     padding: 5px;
+  background-color: #E8FCFD;
 }
 
 .header-contents .topbar img {
 /* tamanho da imagem do logo */
-    width: 200px;
-    height: 110px;
-    margin-left: 25px;
+    width: 180px;
+    height: 90px;
+    margin-left: 65px;
 }
                 
 .header-contents .navbar {
@@ -49,23 +50,29 @@ html {
 .navbar ul a {
 /* estilização do link da página no menu */
     text-decoration: none;
-    color: #C4EEF2;
+    color: #231459;
     font-size: 22px;
 }
 
 .navbar ul a:hover {
 /* estilização de quando o mouse passa sobre o link no menu */
-    color: #F27457;
+    color: #61a89b;
     transition: 0.9s;
-    font-size: 28px;
+    font-size: 26px;
 }
 
 /* CONFIGURAÇÃO DO BODY - CORPO DA PÁGINA*/
                
-.banner img {
+.banner {
 /* estilização e enquadramento do banner - em todas as páginas */
    width: 100%;
-    height: 200px;
+  background-image: url(/Assets/banner-site.jpeg);
+  height: 175px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: brightness(90%);
+
 }
                
 .body-contents {
@@ -122,7 +129,7 @@ html {
 
 .minitext-1 .card {
   /* config do card */
-  border: 1px solid #C9DFF2;
+  border: 2px solid #231459;
   width: 390px;
   height: 650px;
   display: flex;
@@ -156,7 +163,7 @@ html {
 
 .card:hover {
   /* estilização do card */
-  box-shadow: 0px 0px 10px 5px #C9DFF2;
+  box-shadow: 0px 0px 10px 5px #54b4a3;
   transition: 0.5s;
   transform: scale(1.02);
 }
@@ -181,9 +188,8 @@ html {
   margin: 10px auto;
   display: flex;
   flex-wrap: wrap;
-  background-color: #C9DFF2;
-  filter:brightness(86%);
-  box-shadow: 0px 0px 10px 0px #C9DFF2;
+  background-color: #abd9a9ad;
+  filter:brightness(90%);
 }
 
 .servico-1 {
@@ -251,7 +257,7 @@ html {
   width: 90%;
   display: flex;
   flex-direction: column;
-  border: #C9DFF2 solid 2px;
+  border: 2px solid #231459;
 }
 
 .body-sobre-nos .title {
@@ -278,8 +284,7 @@ form {
   width: 400px;
   /* Ver o esboço do formulário */
   padding: 1em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
+  border: 2px solid #231459;
 }
 
 form div + div {
@@ -335,7 +340,101 @@ button {
                 
 footer {
   width: 100%;
-  height: 50px;
+  height: 150px;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #494C73;
+  color: white;
+
+}
+
+.footer-contents {
+  width: 10%;
   text-align: center;
 }
 
+.image-logo img{
+  width: 80px;
+  height: 40px;
+}
+
+.footer-text {
+  width: 100%;
+  text-align: center;
+  font-size: 13px;
+}
+
+.footer-nav ul {
+  max-width: 100%;
+  list-style-type: none;
+  font-size: 22px;
+  text-align: center;
+}
+
+.footer-nav a {
+  text-decoration: none;
+}
+
+.redes-sociais {
+  width: 15%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.redes-sociais i {
+  margin: 5%;
+}
+
+.newsletter-form {
+  margin: 3px;
+  text-align: center;
+  border: 2px solid white;  
+}
+
+.newsletter-form label {
+    width: 100%;
+    margin: 3px;
+    font-size: 18px;
+    text-align: center;
+}
+    
+.newsletter-form input {
+    border: 2px solid black;
+    font-size: 18px;
+    margin: 2px;
+    width: 100%;
+}
+
+.newsletter-form button{
+  font-size: 16px;
+  margin: 3px auto;
+}
+
+.side {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.side ul {
+  max-width: 100%;
+  text-align: center;
+  list-style-type: none;
+  font-size: 16px;
+}
+
+.footer-nav a,
+.side a { 
+  color: white;
+  text-decoration: none;
+}
+
+.copy{
+  text-align: center;
+}
