--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
 
 .header-contents .topbar img {
 /* tamanho da imagem do logo */
-    width: 180px;
+    width: 160px;
     height: 90px;
     margin-left: 65px;
 }
@@ -66,7 +66,7 @@ html {
 .banner {
 /* estilização e enquadramento do banner - em todas as páginas */
    width: 100%;
-  background-image: url(/Assets/banner-site.jpeg);
+  background-image: url(Assets/banner-site.jpeg);
   height: 175px;
   background-size: cover;
   background-position: center;
@@ -79,9 +79,9 @@ html {
 /* estilização do bloco de títulos e textos com centralização  */
     display: flex;
     flex-direction: column;
-    margin: 30px auto;
+    margin-top: 1.5%;
     justify-content: center;
-    width: 98%;
+    width: 100%;
 }
                 
 .title {
@@ -116,15 +116,13 @@ html {
 
 
 
-
 /* ESTILIZAÇÃO CARDS - PÁGINA 1 - ETAPAS DE TRABALHO */
 
 .text-content {
 /* estilização do display menor-abaixo - PÁGINA INICIAL - */
     display: flex;
     justify-content: space-evenly;
-    width: 98%;
-    margin: 25px auto;
+    width: 100%;
 }
 
 .minitext-1 .card {
@@ -135,6 +133,7 @@ html {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-top: 3%;
 }
 
 .minitext-1 h3 {
@@ -278,11 +277,21 @@ html {
 
 /* CONFIG DO FORMULÁRIO - PAGINA 4 - CONTATO*/
 
+
+input {
+  margin-bottom: 2%;
+}
+
+button {
+  margin-top: 2%;
+}
+
 form {
-  /* Centralizar o formulário na pagina */
-  margin: 30px auto;
-  width: 400px;
-  /* Ver o esboço do formulário */
+  margin: 0 auto;
+  width: 25%;
+  margin-bottom: 4%;
+  margin-top: 2%;
+
   padding: 1em;
   border: 2px solid #231459;
 }
@@ -336,12 +345,15 @@ button {
   margin-left: .5em;
 }
 
+
+
+
 /* CONFIGURAÇÃO DO FOOTER -TODAS AS PÁGINAS - FINAL DA PÁGINA */
                 
 footer {
   width: 100%;
-  height: 150px;
-  margin-top: 5%;
+  /* height: 150px;
+  margin-top: 5%; */
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -363,7 +375,7 @@ footer {
 .footer-text {
   width: 100%;
   text-align: center;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .footer-nav ul {
@@ -377,17 +389,47 @@ footer {
   text-decoration: none;
 }
 
+.footer-nav ul a:hover {
+  /* estilização de quando o mouse passa sobre o link no menu */
+      color: #61a89b;
+      transition: 0.9s;
+  }
+
 .redes-sociais {
   width: 15%;
   text-align: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
 }
 
 .redes-sociais i {
   margin: 5%;
+}
+
+.redes-sociais a {
+  color: white;
+}
+
+.linkedin a:hover {
+  color: #0e76a8;
+  transition: 0.8s;
+}
+ 
+.instagram a:hover {
+  color: #D81B60;
+  transition: 0.8s;
+}
+
+.github a:hover {
+  color: black;
+  transition: 0.8s;
+}
+
+.whatsapp a:hover {
+  color: #40C351;
+  transition: 0.8s;
 }
 
 .newsletter-form {
@@ -424,9 +466,9 @@ footer {
 
 .side ul {
   max-width: 100%;
-  text-align: center;
+  text-align: justify;
   list-style-type: none;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .footer-nav a,
@@ -438,3 +480,105 @@ footer {
 .copy{
   text-align: center;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .header-contents {
+  width: 100%;
+  flex-direction: column;
+  }
+
+  .topbar {
+  margin: 0 auto;}
+
+  .header-contents .topbar img {
+  width: 80px; 
+  height: 50px;
+  margin-left: 0px;
+  }
+
+  .header-contents .navbar ul {
+  flex-direction: column;
+  }
+
+  .header-contents .navbar ul li {
+  margin-bottom: 1%;
+  }
+    
+  .body-contents {
+  flex-direction: column;
+  }
+
+  .text-content {
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  }
+
+  .servicos-superior {
+  width: 100%;
+  flex-direction: column;
+  }
+
+  .sobre-container1 {
+  justify-content: center;
+  }
+
+  .section-sobre-nos {
+  width: 95%;
+  text-align: left;}
+
+  .body-sobre-nos .text-sobre-nos {
+  text-align: center;}
+
+  .sobre-container3 {
+  justify-content: center;
+  }
+
+  form {
+  width: 85%;
+  text-align: center;}
+
+  label {
+  text-align: center;
+  }
+
+  footer {
+  flex-direction: column;
+  margin-top: 2%;
+  }
+
+  .footer-contents {
+  width: 90%;
+  margin-bottom: 2%;}
+
+  .footer-nav {
+  display: none;
+  }
+
+  .redes-sociais {
+  width: 100%;
+  margin-bottom: 2%;}
+
+  .newsletter-form {
+    width: 75%;}
+
+  .side {
+  width: 100%;
+  margin-bottom: 2%;
+  }
+
+  .side ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  }
+}
+
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
