--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ footer {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
 
   .header-contents {
   width: 100%;
@@ -579,6 +579,6 @@ footer {
 
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
 }
 
